[tool.poetry]
name = "keepit"
version = "0.1.0"
description = ""
authors = ["heonjin <87924725+kwon-evan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.101.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
